
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";

message so_extDailyTrx {
	prototype.time_point_sec       	   date           =      1;
    uint64                   							   count          =      2;
      
}


message so_list_extDailyTrx_by_date {
	prototype.time_point_sec       		date       = 1;
}


message so_list_extDailyTrx_by_count {
	uint64                   								count      = 1;
	prototype.time_point_sec       		date       = 2;
}


message so_unique_extDailyTrx_by_date {
	prototype.time_point_sec       		date       = 1;
}
